--- a/pom.xml
+++ b/pom.xml
@@ -46,8 +46,10 @@
         <dependency>
             <groupId>com.h2database</groupId>
             <artifactId>h2</artifactId>
-            <version>2.1.210</version>
-            <scope>test</scope>
+            <!-- version =  1.3.176 이 후 부터 보안 이슈로 DB 자동생성을 막아둠. 1.3.176 사용 권장 -->
+            <version>1.3.176</version>
+            <!-- scope = test 일 경우 로컬 테스트 불가 -->
+            <scope>runtime</scope>
         </dependency>
     </dependencies>
     <dependencyManagement>
