--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -4,6 +4,12 @@ server:
 spring:
   application:
     name: user-service
+  h2:
+    console:
+      enabled: true
+      settings:
+        web-allow-others: true # 외부에서 접속 허용
+      path: /h2-console # h2 접속 주소
 
 eureka:
   instance:
