--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -1,5 +1,7 @@
 server:
   port: 0 # 0 : random port 사용 선언
+  servlet:
+    context-path: /user-service
 
 spring:
   application:
@@ -10,6 +12,9 @@ spring:
       settings:
         web-allow-others: true # 외부에서 접속 허용
       path: /h2-console # h2 접속 주소
+  datasource:
+    driver-class-name: org.h2.Driver
+    url: jdbc:h2:mem:testdb
 
 eureka:
   instance:
